--- a/texto.tex
+++ b/texto.tex
@@ -75,7 +75,8 @@ Engenharia da Universidade do Porto}
 \chapter{Time Stamped Tries}
 \input{tst}
 
-\chapter{Implementation Details}
+\chapter{Retroactive Tabling}
+\input{retroactive}
 
 \chapter{Experimental Results}
 \input{results}
